--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: page
 title: Jacob's Website
-subtitle: This is where my deepest secrets come to die :(. 
+subtitle: This is where my deepest secrets come to die :(
+use-site-title: true
 ---
